# cwii

./: .dockerignore  .gitignore  .hadolint.yaml  .markdownlint.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  codecov.yml  ct.yaml  deny.toml  mkdocs.yml  release-please-config.json  rust-toolchain.toml  rustfmt.toml  taplo.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  docs.yaml  e2e-cloud.yaml  release-please.yaml  release.yaml
charts/cwii/: .helmignore  Chart.yaml  values.schema.json  values.yaml
charts/cwii/ci/: aws-only-fail-policy-values.yaml  certmanager-values.yaml  gcp-initcontainer-values.yaml  selfsigned-values.yaml
charts/cwii/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  deployment.yaml  mutatingwebhookconfiguration.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  webhook-tls.yaml
charts/cwii/templates/tests/: test-connection.yaml
crates/cwii/: Cargo.toml
crates/cwii-core/: Cargo.toml
crates/cwii-core/src/: admission.rs  annotations.rs  config.rs  error.rs  k8s.rs  lib.rs  patch.rs  plan.rs  provider.rs  resolve.rs  telemetry.rs
crates/cwii-provider-aws/: Cargo.toml
crates/cwii-provider-aws/src/: lib.rs
crates/cwii-provider-az/: Cargo.toml
crates/cwii-provider-az/src/: lib.rs
crates/cwii-provider-gcp/: Cargo.toml
crates/cwii-provider-gcp/src/: credentials.rs  lib.rs
crates/cwii/src/: config.rs  main.rs  telemetry.rs  webhook.rs
crates/cwii/tests/: multi_provider.rs
docs/: CNAME  annotations.md  architecture.md  aws-setup.md  az-setup.md  e2e-testing.md  gcp-setup.md  index.md  install.md  observability.md  releasing.md  requirements.txt  self-hosted-oidc.md  verification.md
e2e/: kind-cluster.yaml
