[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/cluster-workload-identity/cwii"
homepage = "https://github.com/cluster-workload-identity/cwii"
description = "Cluster Workload Identity Injector — a multi-cloud Kubernetes mutating admission webhook"

[workspace.dependencies]
# Internal crates.
cwii-core = { path = "crates/cwii-core", version = "0.1.0" }
cwii-provider-gcp = { path = "crates/cwii-provider-gcp", version = "0.1.0" }
cwii-provider-aws = { path = "crates/cwii-provider-aws", version = "0.1.0" }
cwii-provider-az = { path = "crates/cwii-provider-az", version = "0.1.0" }

# External dependencies (dependabot proposes upgrades).
anyhow = "1"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
json-patch = "2"
k8s-openapi = { version = "0.23", features = ["latest"] }
kube = { version = "0.95", default-features = false, features = [
  "client",
  "rustls-tls",
  "admission",
] }
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
  "grpc-tonic",
  "trace",
  "metrics",
] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"
