[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/cluster-workload-identity/cwii"
homepage = "https://github.com/cluster-workload-identity/cwii"
description = "Cluster Workload Identity Injector — a multi-cloud Kubernetes mutating admission webhook"

[workspace.dependencies]
# Internal crates.
cwii-core = { path = "crates/cwii-core", version = "0.1.0" }
cwii-provider-gcp = { path = "crates/cwii-provider-gcp", version = "0.1.0" }
cwii-provider-aws = { path = "crates/cwii-provider-aws", version = "0.1.0" }
cwii-provider-az = { path = "crates/cwii-provider-az", version = "0.1.0" }

# External crates.
anyhow = "1"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
json-patch = "4"
# Compile against the OLDEST supported cluster (1.33) for forward-compatibility across 1.33–1.36.
k8s-openapi = { version = "0.27", features = ["v1_33"] }
kube = { version = "3", default-features = false, features = [
  "client",
  "rustls-tls",
  "admission",
] }
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
  "grpc-tonic",
  "trace",
  "metrics",
] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"
