[package]
name = "cwii-provider-aws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AWS AssumeRoleWithWebIdentity provider for cwii"
publish = false

[dependencies]
cwii-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
