[package]
name = "cwii-provider-az"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Azure (Entra ID) workload identity federation provider for cwii"
publish = false

[dependencies]
cwii-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
